[package]
name = "msal-rs"
version = "0.1.1"
edition = "2021"
authors = ["sangonzal <https://github.com/sangonzal", "freedit <https://github.com/freedit-dev>"]
description = "Microsoft Authentication Library for Rust"
license = "MIT"
repository = "https://github.com/freedit-dev/msal-rs"
readme = "README.md"
keywords = ["msal", "microsoft", "authentication", "Azure"]
categories = ["authentication", "azure", "active-directory"]
include = ["src/**/*", "examples/**/*", "LICENSE", "README.md"]

[dependencies]
base64 = "0.21"
hex = "0.4"
jsonwebtoken = "9.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
uuid = { version = "1.4", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"