[package]
name = "msal-rs"
version = "0.1.2"
edition = "2021"
authors = [
    "sangonzal <https://github.com/sangonzal",
    "freedit <https://github.com/freedit-dev>",
]
description = "Microsoft Authentication Library for Rust"
license = "MIT"
repository = "https://github.com/freedit-dev/msal-rs"
readme = "README.md"
keywords = ["msal", "microsoft", "authentication", "Azure"]
categories = ["authentication"]
include = ["src/**/*", "examples/**/*", "LICENSE", "README.md"]

[dependencies]
base64 = "0.22"
hex = "0.4"
jsonwebtoken = "10.2"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
uuid = { version = "1.4", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
